# integrity-data-foundation

./: README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: integrity_sample.csv
src/integrity_data_foundation/: __init__.py  pipeline.py  schemas.py  validators.py
tests/: test_smoke.py
