[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity-data-foundation"
version = "0.1.0"
description = "Engineering-first data validation and structuring baselines for integrity and RBI decision support."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Felipe Rocha"}]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.7",
  "rich>=13.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
